# tsu-emulator

./: .gitignore  API_test.py  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCSTRINGS.md  DOCUMENTATION_README.md  LICENSE  PAPER_README.md  README.md  example_viz.py  ising_solver.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_basic.py  tsu.py  tsu_api.py  tsu_benchmark.py  tsu_core.py  tsu_hardware_timing.py  tsu_proper_demo.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  coverage.yml  security.yml  style.yml  tests.yml
docs/: BAYESIAN_NN.md  BENCHMARKS.md
examples/: API_test.py  bayesian_nn_demo.py  tsu_hardware_timing.py
scripts/: extract_benchmarks.py
tests/: test_basic.py  test_core.py  test_gibbs.py  test_ising.py  test_minimal.py  test_ml.py  test_visualization.py
tsu/: __init__.py  api.py  benchmarks.py  cli.py  core.py  demos.py  gibbs.py  hardware.py  ml.py  visualization.py
tsu/benchmarks/: README.md  __init__.py  comparison.py  ml.py  optimization.py  runner.py  sampling.py
tsu/models/: __init__.py  ising.py
